fix homepage-hero overflow

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -32,6 +32,9 @@ body {
 //   padding-bottom: $footer_height+$footer_padding*2;
 // }
 
+.homepage-hero {
+  width: 100%;
+}
 
 /* Admin Flash CSS */
 .admin-flash-text {
